<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="drawer_open">Open navigation drawer</string>
   <string name="drawer_close">Close navigation drawer</string>

   <string name="navigation_title">Navigation</string>

   <string name="add_dialog_title">Add Feed</string>
   <string name="edit_dialog_title">Edit Feed</string>

   <string name="add_feed">Add</string>
   <string name="unread">Unread</string>
   <string name="refresh">Refresh</string>
   <string name="offline">Offline</string>

   <string name="refresh_time_preferences">Refresh Time</string>

   <string name="feed_name_dialog">Feed Name</string>
   <string name="feed_name_hint">optional</string>
   <string name="feed_url_dialog">Feed URL</string>
   <string name="feed_url_hint">http://example.com/rss</string>
   <string name="feed_tag_dialog">Tags</string>
   <string name="feed_tag_title">Tags</string>
   <string name="feed_tag_hint">tag one, tag two, …</string>

   <string name="filter_hint">new filter</string>
   <string name="add_filter">Add Filter</string>
   <string name="delete_filter">Delete Filter</string>

   <string name="cancel_dialog">Cancel</string>
   <string name="add_dialog">Add</string>
   <string name="dialog_checking_feed">Checking…</string>
   <string name="invalid_feed">Invalid feed URL</string>
   <string name="added_feed">Added </string>
   <string name="deleted_feed">Deleted </string>
   <string name="accept_dialog">Accept</string>

   <string name="all_tag">All</string>

   <string name="notification_title_singular">1 Unread Item</string>
   <string name="notification_title_plural">%d Unread Items</string>
   <string name="notification_content_tag_item">%d tag has an unread item</string>
   <string name="notification_content_tag_items">%d tag has unread items</string>
   <string name="notification_content_tags">%d tags have unread items</string>

   <string name="access_image_description">Image from feed.</string>

</resources>
