<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:windowSoftInputMode="stateVisible">

   <TextView
      android:id="@+id/title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="18dp"
      android:layout_marginStart="18dp"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif-light"
      android:gravity="start"
      android:text="@string/feed_name_dialog"/>

   <EditText
      android:id="@+id/name_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/title_text"
      android:layout_marginBottom="4dp"
      android:layout_marginEnd="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="4dp"
      android:gravity="fill_horizontal"
      android:hint="@string/feed_name_hint"
      android:inputType="textAutoCorrect|textCapWords"
      android:scrollHorizontally="true"/>

   <TextView
      android:id="@+id/feed_url_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/name_edit"
      android:layout_marginLeft="18dp"
      android:layout_marginStart="18dp"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif-light"
      android:gravity="start"
      android:text="@string/feed_url_dialog"/>

   <EditText
      android:id="@+id/feed_url_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/feed_url_title"
      android:layout_marginBottom="4dp"
      android:layout_marginEnd="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="4dp"
      android:gravity="fill_horizontal"
      android:hint="@string/feed_url_hint"
      android:inputType="textNoSuggestions|textUri"
      android:scrollHorizontally="true"/>

   <TextView
      android:id="@+id/tag_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/feed_url_edit"
      android:layout_marginLeft="18dp"
      android:layout_marginStart="18dp"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif-light"
      android:gravity="start"
      android:text="@string/feed_tag_dialog"/>

   <EditText
      android:id="@+id/tag_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/tag_title"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="4dp"
      android:gravity="fill_horizontal"
      android:hint="@string/feed_tag_hint"
      android:inputType="textNoSuggestions"
      android:scrollHorizontally="true"/>

   <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_below="@+id/tag_edit">

      <Button
         android:id="@+id/negative_button"
         android:layout_height="wrap_content"
         android:layout_width="0px"
         android:layout_weight="0.5"
         android:text="@string/cancel_dialog"
         android:background="@drawable/dialog_select"/>

      <Button
         android:id="@+id/positive_button"
         android:layout_height="wrap_content"
         android:layout_width="0px"
         android:layout_weight="0.5"
         android:text="@string/add_dialog"
         android:background="@drawable/dialog_select"/>
   </LinearLayout>


</RelativeLayout>
